# desktop_clock

./: .gitignore  FLASHING_GUIDE.md  README.md  TECHNICAL_REPORT.md
.sisyphus/plans/: desktop-clock-integration-fix.md  desktop-clock-test.md  desktop-clock-verify.md  desktop-clock.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: card.py  (+5 more)
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/display/: CMakeLists.txt  display_task.c  font_renderer.c  framebuffer.c
firmware/components/display/effects/: bg_code_rain.c  bg_code_rain.h  bg_fire.c  bg_fire.h  bg_hourglass.c  bg_hourglass.h  bg_life.c  bg_life.h  bg_pong.c  bg_pong.h  bg_water.c  bg_water.h  bg_weather.c  bg_weather.h  fg_render.c  fg_render.h
firmware/components/display/fonts/: font_3x5.h  font_5x5.h  font_7x9.h
firmware/components/display/include/: display_task.h  font_renderer.h  framebuffer.h
firmware/components/display/test/: test_bg_code_rain.c  test_bg_fire.c  test_bg_life.c  test_bg_pong.c  test_bg_water.c  test_bg_weather.c  test_display_task.c  test_fg_render.c  test_font_renderer.c  test_framebuffer.c
firmware/docs/: i2c_verification.md  power_budget.md
firmware/main/: CMakeLists.txt  app_main.c  gpio_test.c  i2c_scan.c  render_task.c  task_prio.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  router.ts  types.ts
tests/: __init__.py  conftest.py  test_error_scenarios.py  test_firmware_ota.py
(+90 files in other folders)
